Fix z-index

--- a/src/components/popups/LeagueSelectPopup.scss
+++ b/src/components/popups/LeagueSelectPopup.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .league-popup {
-  z-index: 7;
+  z-index: 30;
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.6);
@@ -24,6 +24,7 @@
     position: fixed;
     right: 0;
     top: 142px;
+    // margin-top: 260px;
 
     .header {
       position: relative;
